web/test-pull.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pull
spec:
  containers:
  - name: test
    image: asia-northeast3-docker.pkg.dev/kdt1-finalproject/yj-repo/yjweb:web-20250706-05
  imagePullSecrets:
  - name: regcred
