web/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: asia-northeast3-docker.pkg.dev/kdt1-finalproject/yj-repo/yjweb:web-20250706-05
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apache-config-volume
          mountPath: /etc/apache2/sites-enabled/000-default.conf
          subPath: 000-default.conf
      volumes:
      - name: apache-config-volume
        configMap:
          name: apache-config
